linking in assets

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <header role="header">
 
 </div>
-<a href="index.html"><img border="0" class="logo" src="/assets/images/logo.png" alt="David Bowie Personas Logo"></a>
+<a href="index.html"><img border="0" class="logo" src="./assets/images/logo.png" alt="David Bowie Personas Logo"></a>
 <!-- Nav-->
   <nav class="container" role="navigation">
      <ol>
@@ -68,16 +68,16 @@
     Follow Us
   </p>
   <li>
-    <a href="#"><img border="0" class="social-icon" src="/assets/images/social-facebook.png" alt="facebook logo"></a>
+    <a href="#"><img border="0" class="social-icon" src="./assets/images/social-facebook.png" alt="facebook logo"></a>
   </li>
   <li>
-    <a href="#"><img border="0" class="social-icon" src="/assets/images/social-twitter.png" alt="twitter logo"></a>
+    <a href="#"><img border="0" class="social-icon" src="./assets/images/social-twitter.png" alt="twitter logo"></a>
   </li>
   <li>
-    <a href="#"><img border="0" class="social-icon" src="/assets/images/social-google+.png" alt="google+ logo"></a>
+    <a href="#"><img border="0" class="social-icon" src="./assets/images/social-google+.png" alt="google+ logo"></a>
   </li>
   <li>
-    <a href="#"><img border="0" class="social-icon" src="/assets/images/social-instagram.png" alt="instagram logo"></a>
+    <a href="#"><img border="0" class="social-icon" src="./assets/images/social-instagram.png" alt="instagram logo"></a>
   </li>
 </ol>
 </footer>
