linking assets again

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
   <header role="header">
 
   </div>
-  <a href="index.html"><img border="0" class="logo" src="/assets/images/logo.png" alt="David Bowie Personas Logo"></a>
+  <a href="index.html"><img border="0" class="logo" src="./assets/images/logo.png" alt="David Bowie Personas Logo"></a>
   <!-- Nav-->
     <nav class="container" role="navigation">
        <ol>
