--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -62,7 +62,7 @@
 <!-- footer-->
 
 <footer class="container" role="footer">
-
+  <!-- social icons -->
 <ol class="social-icons-list">
   <p>
     Follow Us
@@ -80,6 +80,16 @@
     <a href="#"><img border="0" class="social-icon" src="./assets/images/social-instagram.png" alt="instagram logo"></a>
   </li>
 </ol>
+
+<!-- signup form -->
+<form action="/action_page.php">
+  <h6>Get Updates</h6>
+  <div class="input-container">
+    <i class="fa fa-user icon"></i>
+    <input class="signup-field" type="text" placeholder="email" name="usrnm">
+    <button type="submit" class="btn">Sign up</button>
+  </div>
+
 </footer>
 
 </body>
