--- a/discography.html
+++ b/discography.html
@@ -120,5 +120,43 @@
 </div>
   </main>
 
+
+  <!-- footer-->
+
+  <footer class="container" role="footer">
+    <!-- social icons -->
+  <ol class="social-icons-list">
+    <h6>
+      Follow Us
+    </h6>
+    <li>
+      <a href="#"><img border="0" class="social-icon" src="./assets/images/social-facebook.png" alt="facebook logo"></a>
+    </li>
+    <li>
+      <a href="#"><img border="0" class="social-icon" src="./assets/images/social-twitter.png" alt="twitter logo"></a>
+    </li>
+    <li>
+      <a href="#"><img border="0" class="social-icon" src="./assets/images/social-google+.png" alt="google+ logo"></a>
+    </li>
+    <li>
+      <a href="#"><img border="0" class="social-icon" src="./assets/images/social-instagram.png" alt="instagram logo"></a>
+    </li>
+  </ol>
+
+  <!-- signup form -->
+  <div class="input-container">
+  <form action="/action_page.php">
+    <h6>Get Updates</h6>
+    <div >
+      <i class="fa fa-user icon"></i>
+      <input class="signup-field" type="text" placeholder="email" name="usrnm">
+      <button type="submit" class="btn">Sign up</button>
+    </div>
+  </div>
+
+
+  </footer>
+
+
 </body>
 </html>
