--- a/tour-dates.html
+++ b/tour-dates.html
@@ -47,6 +47,206 @@
   </header>
   <!-- header ends -->
 
+<!--Tour Cards  -->
+<main>
+
+<div class="row">
+  <div class="col-m-4">
+  <!-- london card -->
+  <div class="card tour">
+      <img class="card-img-top" src="./assets/images/concert_london_sized.jpg" alt="London Concert">
+      <div class="card-body">
+        <h5 class="card-date">Jul 3, 1973</h5>
+        <h3 class="card-title">London</h3>
+      </div>
+      <div class="tourwatch">
+        <a href="#" class="btn btn-primary">Watch Concert</a>
+      </div>
+  </div>
+
+    <!-- Tokyo Concert -->
+    <div class="card tour">
+        <img class="card-img-top" src="./assets/images/concert_tokyo_sized.jpg" alt="Tokyo Concert">
+      <div class="card-body">
+        <h5 class="card-date">Dec 28, 1978</h5>
+        <h3 class="card-title">Tokyo</h3>
+      </div>
+      <div class="tourwatch">
+        <a href="#" class="btn btn-primary">Watch Concert</a>
+    </div>
+   </div>
+
+
+    <!-- Madison Square-->
+    <div class="card tour">
+        <img class="card-img-top" src="./assets/images/concert_madisonsquare_sized.jpg" alt="Madison Square">
+      <div class="card-body">
+        <h5 class="card-date">Jan 9, 1997</h5>
+        <h3 class="card-title">New York</h3>
+          </div>
+      <div class="tourwatch">
+        <a href="#" class="btn btn-primary">Watch Concert</a>
+    </div>
+  </div>
+  </div>
+</div>
+
+</div>
+
+<!-- Tour Table -->
+<div class=row>
+<table align="center" class="tour col-xs-8" >
+  <thead>
+    <tr>
+      <th>
+        Tour
+      </th>
+      <th>
+        Location
+      </th>
+      <th>
+        Date
+      </th>
+      <th>
+        Links
+      </th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>
+        <b>Station to Station</b>
+      </td>
+      <td>
+        Vancouver
+      </td>
+      <td>
+        1976
+      </td>
+    <td>
+        <a href="#">Watch concert</a>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <b>The Outside Tour</b>
+      </td>
+      <td>
+        Connecticut
+      </td>
+      <td>
+        1995
+      </td>
+    <td>
+        <a href="#">Watch concert</a>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <b>Glastonbury</b>
+      </td>
+      <td>
+        Glastonbury
+      </td>
+      <td>
+        2000
+      </td>
+    <td>
+        <a href="#">Watch concert</a>
+      </td>
+    </tr>
+  </tr>
+  <tr>
+    <td>
+      <b>Live by Request</b>
+    </td>
+    <td>
+      Glastonbury
+    </td>
+    <td>
+      2002
+    </td>
+  <td>
+      <a href="#">Watch concert</a>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <b>A Reality Tour</b>
+    </td>
+    <td>
+      Machester
+    </td>
+    <td>
+      2003
+    </td>
+  <td>
+      <a href="#">Watch concert</a>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <b>Hammerstein Ballroom</b>
+    </td>
+    <td>
+      New York
+    </td>
+    <td>
+      2006
+    </td>
+  <td>
+      <a href="#">Watch concert</a>
+    </td>
+  </tr>
+  </tbody>
+</table>
+</div>
+
+</main>
+
+  <!-- footer-->
+<div class="row">
+  <footer class="container" role="footer">
+    <!-- social icons -->
+  <ol class="social-icons-list">
+    <h6>
+      Follow Us
+    </h6>
+    <li>
+      <a href="#"><img border="0" class="social-icon" src="./assets/images/social-facebook.png" alt="facebook logo"></a>
+    </li>
+    <li>
+      <a href="#"><img border="0" class="social-icon" src="./assets/images/social-twitter.png" alt="twitter logo"></a>
+    </li>
+    <li>
+      <a href="#"><img border="0" class="social-icon" src="./assets/images/social-google+.png" alt="google+ logo"></a>
+    </li>
+    <li>
+      <a href="#"><img border="0" class="social-icon" src="./assets/images/social-instagram.png" alt="instagram logo"></a>
+    </li>
+  </ol>
+
+  <!-- signup form -->
+  <div class="input-container">
+  <form action="/action_page.php">
+    <h6>Get Updates</h6>
+    <div>
+      <i class="fa fa-user icon"></i>
+      <input class="signup-field" type="text" placeholder="email" name="usrnm">
+      <button type="submit" class="btn">Sign up</button>
+    </div>
+  </div>
+
+</div>
+  </footer>
+
+
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 
 </body>
 </html>
