--- a/about.html
+++ b/about.html
@@ -52,13 +52,15 @@
   </header>
   <!-- header ends -->
 
-<section class="container col-xs-12">
+<section class="container">
 
   <div class="about-header">
+  <div class="row">
     <h1 class="headline">David Bowies Personas Explained</h1>
   </div>
-
+  </div>
     <!--carousel -->
+<section class="container col-xs-12">
   <div id="myCarousel" class="carousel slide carousel-left" data-ride="carousel">
 
     <!-- Indicators 3 buttons -->
@@ -68,13 +70,17 @@
       <li data-target="#myCarousel" data-slide-to="2"></li>
     </ol>
 
+
     <!-- Wrapper for slides Content for Slides -->
+ <section class="row">
     <div class="carousel-inner">
 
       <!-- First slider  -->
       <div class="item">
-        <img src="./assets/images/slider1_davyjones.jpeg" alt="Davy Jones in London" align="right">
-        <div  class="about-text">
+        <div class="sliderimage">
+        <img src="./assets/images/slider1_davyjones.jpeg" alt="Davy Jones in London" class="pull-left">
+      </div>
+        <span  class="about-text col-xs-4">
           <h2>Davy Jones</h2>
           <p>
             Born Davy Jones in Brixton in 1947 and bred in the leafy suburbs of Bromley, Davy Jones was the first stage (and real name) of David Bowie. He studied music and took up jazz on his plastic saxophone. A series of unsuccessful post-rock‘n’roll bands left the aspiring star a little disheartened and inspired his move and change to David Bowie.
@@ -86,16 +92,16 @@
             <li>"Liza Jane" </li>
             <li>"Louie, Louie Go Home" </li>
           </ol>
-        </div>
+        </span>
       </div>
       <!-- End - First slider  -->
 
       <!-- Second slider  -->
       <div class="item active">
-        <div class="col-xs-8">
-          <img src="./assets/images/slider2_ziggystardust2.jpg" alt="Ziggy Stardust Live">
+        <div class="sliderimage">
+          <img src="./assets/images/slider2_ziggystardust2.jpg" alt="Ziggy Stardust Live" class="pull-left">
         </div>
-        <div class="about-text col-xs-4">
+        <span class="about-text col-xs-4">
           <h2> Ziggy Stardust</h2>
           <p>
             His first and arguably greatest alter ego was born when Bowie broke through into the mainstream with Ziggy Stardust. Face daubed with a lightening bolt and mullet hairstyle dyed crimson red, Ziggy Stardust was a bisexual rock star alien who acted as a messenger for extra-terrestrial beings. Bowie’s androgynous, wafer-thin doppelganger came to redefine an entire era of rock’n’roll.
@@ -107,14 +113,16 @@
             <li>"Heroes" </li>
             <li>"Space Oddity" </li>
           </ol>
-        </div>
+        </span>
       </div>
       <!-- End - Second slider  -->
 
       <!-- Third slider  -->
       <div class="item">
-        <img src="./assets/images/slider3_alladinsane.jpg" alt="Aladin Sine Album Profile">
-        <div class="about-text">
+        <div class="sliderimage">
+        <img src="./assets/images/slider3_alladinsane.jpg" alt="Aladin Sine Album Profile" class="pull-left">
+      </div>
+        <span class="about-text col-xs-4">
           <h2>Aladin Sane</h2>
           <p>
             Aladdin Sane was a continuation of Ziggy Stardust. The protagonist of his sixth album, Bowie describes the alter ego as “Ziggy goes to America” because the album was inspired by his 1972 US tour. Later, he also told friends that the character was inspired by his brother Terry who was diagnosed with schitzophrenia. After all, the name is based on the pun ‘A Lad Insane’.
@@ -126,13 +134,16 @@
             <li>"Watch that Man" </li>
             <li>"Aladin Sane" </li>
           </ol>
-        </div>
+        </span>
       </div>
     </div>
     <!-- End - Third slider  -->
+ </section>
+  </section>
 
 
     <!-- Controls for Indicators -->
+    <div class="row">
     <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
        <span class="sr-only">Previous</span>
@@ -141,9 +152,47 @@
        <span class="carousel-control-next-icon" aria-hidden="true"></span>
        <span class="sr-only">Next</span>
      </a>
-
+   </div>
   </div>
 </section>
+
+
+<!-- footer-->
+<footer class="container" role="footer">
+  <!-- social icons -->
+<ol class="social-icons-list">
+  <h6>
+    Follow Us
+  </h6>
+  <li>
+    <a href="#"><img border="0" class="social-icon" src="./assets/images/social-facebook.png" alt="facebook logo"></a>
+  </li>
+  <li>
+    <a href="#"><img border="0" class="social-icon" src="./assets/images/social-twitter.png" alt="twitter logo"></a>
+  </li>
+  <li>
+    <a href="#"><img border="0" class="social-icon" src="./assets/images/social-google+.png" alt="google+ logo"></a>
+  </li>
+  <li>
+    <a href="#"><img border="0" class="social-icon" src="./assets/images/social-instagram.png" alt="instagram logo"></a>
+  </li>
+</ol>
+
+<!-- signup form -->
+<div class="input-container">
+<form action="/action_page.php">
+  <h6>Get Updates</h6>
+  <div>
+    <i class="fa fa-user icon"></i>
+    <input class="signup-field" type="text" placeholder="email" name="usrnm">
+    <button type="submit" class="btn">Sign up</button>
+  </div>
+</div>
+
+
+</footer>
+
+
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
