--- a/media.html
+++ b/media.html
@@ -44,5 +44,100 @@
     </nav>
   </header>
   <!-- header ends -->
+
+<!--Gallery  -->
+<div class="main">
+
+<div class="row">
+  <div class="column media">
+    <div class="content">
+      <img src="./assets/images/media_sukitamimesit_1973.jpg" alt="sukitamimesit" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow">
+    </div>
+  </div>
+  <div class="column media">
+    <div class="content">
+      <img src="./assets/images/media_fanclose1975.jpg" alt="fanclose" style="width:100%">
+    </div>
+  </div>
+  <div class="column media">
+    <div class="content">
+      <img src="./assets/images/media_mime1967.jpg" alt="davymime" style="width:100%">
+
+    </div>
+  </div>
+  <div class="column media">
+    <div class="content">
+      <img src="./assets/images/media_monoheroes.jpg" alt="monoheroes" style="width:100%">
+    </div>
+  </div>
+  <div class="column media">
+    <div class="content">
+      <img src="./assets/images/media_onset1975.jpg" alt="onset1975" style="width:100%">
+    </div>
+  </div>
+  <div class="column media">
+    <div class="content">
+      <img src="./assets/images/media_painting.jpg" alt="painting" style="width:100%">
+    </div>
+  </div>
+  <div class="column media">
+    <div class="content">
+      <img src="./assets/images/media_pinkhunky_1972.jpg" alt="pinkhunky_1972" style="width:100%">
+    </div>
+  </div>
+  <div class="column media">
+    <div class="content">
+      <img src="./assets/images/media_siggystool.jpg" alt="media_siggystool" style="width:100%">
+    </div>
+  </div>
+</div>
+
+</div>
+
+  <!-- footer-->
+  <footer class="container" role="footer">
+    <!-- social icons -->
+  <ol class="social-icons-list">
+    <h6>
+      Follow Us
+    </h6>
+    <li>
+      <a href="#"><img border="0" class="social-icon" src="./assets/images/social-facebook.png" alt="facebook logo"></a>
+    </li>
+    <li>
+      <a href="#"><img border="0" class="social-icon" src="./assets/images/social-twitter.png" alt="twitter logo"></a>
+    </li>
+    <li>
+      <a href="#"><img border="0" class="social-icon" src="./assets/images/social-google+.png" alt="google+ logo"></a>
+    </li>
+    <li>
+      <a href="#"><img border="0" class="social-icon" src="./assets/images/social-instagram.png" alt="instagram logo"></a>
+    </li>
+  </ol>
+
+  <!-- signup form -->
+  <div class="input-container">
+  <form action="/action_page.php">
+    <h6>Get Updates</h6>
+    <div>
+      <i class="fa fa-user icon"></i>
+      <input class="signup-field" type="text" placeholder="email" name="usrnm">
+      <button type="submit" class="btn">Sign up</button>
+    </div>
+  </div>
+
+
+  </footer>
+
+
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">   </script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+
+
+
 </body>
 </html>
