--- a/media.html
+++ b/media.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <!-- <link rel="stylesheet" type="text/css" href="./assets/stylesheets/flexboxgrid.min.css" /> -->
   <link href="./assets/stylesheets/style.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="./assets/stylesheets/lightbox.min.css" type="text/css" />
 </head>
 
 
@@ -49,43 +50,43 @@
 <div class="main">
 
 <div class="row">
-  <div class="column media">
+  <div class="column media col-xs-6">
+    <div class="content promo">
+<iframe width="560" height="380" src="https://www.youtube.com/embed/FiK7s_0tGsg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  </div>
+  </div>
+
+  <div class="column media col-xs-3">
     <div class="content">
       <img src="./assets/images/media_sukitamimesit_1973.jpg" alt="sukitamimesit" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow">
     </div>
   </div>
-  <div class="column media">
+  <div class="column media col-xs-3">
     <div class="content">
       <img src="./assets/images/media_fanclose1975.jpg" alt="fanclose" style="width:100%">
     </div>
   </div>
-  <div class="column media">
+  <div class="column media col-xs-3">
     <div class="content">
       <img src="./assets/images/media_mime1967.jpg" alt="davymime" style="width:100%">
-
     </div>
   </div>
-  <div class="column media">
+  <div class="column media col-xs-3">
     <div class="content">
       <img src="./assets/images/media_monoheroes.jpg" alt="monoheroes" style="width:100%">
     </div>
   </div>
-  <div class="column media">
-    <div class="content">
-      <img src="./assets/images/media_onset1975.jpg" alt="onset1975" style="width:100%">
-    </div>
-  </div>
-  <div class="column media">
+  <!-- <div class="column media col-xs-3">
     <div class="content">
       <img src="./assets/images/media_painting.jpg" alt="painting" style="width:100%">
     </div>
-  </div>
-  <div class="column media">
+  </div> -->
+  <div class="column media col-xs-3">
     <div class="content">
       <img src="./assets/images/media_pinkhunky_1972.jpg" alt="pinkhunky_1972" style="width:100%">
     </div>
   </div>
-  <div class="column media">
+  <div class="column media col-xs-3">
     <div class="content">
       <img src="./assets/images/media_siggystool.jpg" alt="media_siggystool" style="width:100%">
     </div>
@@ -132,11 +133,17 @@
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">   </script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-
+    <script src="./assets/javascripts/lightbox.min.js"></script>
+    <script>
+        lightbox.option({
+          'resizeDuration': 200,
+          'wrapAround': true
+        })
+    </script>
 
 
 </body>
