--- a/discography.html
+++ b/discography.html
@@ -14,6 +14,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <!-- <link rel="stylesheet" type="text/css" href="./assets/stylesheets/flexboxgrid.min.css" /> -->
   <link href="./assets/stylesheets/style.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="./assets/stylesheets/lightbox.css" type="text/css" />
+
 </head>
 
 
@@ -66,7 +68,7 @@
         <h3 class="card-title">Liza Jane</h3>
         <br />
         <h5 class="card-text">Decca Recors, Vocalion Pop</h5>
-        <a href="#" class="btn btn-primary">Tracks</a>
+        <a href="./assets/images/tracks_davy.png" class="btn btn-primary" data-lightbox="tracks_davy" data-title="Davy Jones Tracks">Tracks</a>
       </div>
       <div class="star-rating">
         <img class="star-icon" src="./assets/images/icons/Icon Star Small Blue.png" alt="1 star">
@@ -84,7 +86,7 @@
         <h5 class="card-date">16th June 1972</h5>
         <h3 class="card-title">The Rise and Fall of Ziggy Stardust …</h3>
         <h5 class="card-text">RCA</h5>
-        <a href="#" class="btn btn-primary">Tracks</a>
+        <a href="./assets/images/tracks_ziggy.png" class="btn btn-primary" data-lightbox="tracks_ziggy" data-title="Ziggy Stardust Tracks">Tracks</a>
       </div>
       <div class="star-rating">
         <img class="star-icon" src="./assets/images/icons/Icon Star Small Blue.png" alt="1 star">
@@ -105,7 +107,7 @@
         <br />
 
         <h5 class="card-text">RCA</h5>
-        <a href="#" class="btn btn-primary">Tracks</a>
+        <a href="./assets/images/tracks_aladinsane.png" class="btn btn-primary" data-lightbox="tracks_aladinsane" data-title="Aladin Sane Tracks">Tracks</a>
       </div>
       <div class="star-rating">
         <img class="star-icon" src="./assets/images/icons/Icon Star Small Blue.png" alt="1 star">
@@ -156,6 +158,15 @@
 
 
   </footer>
+
+
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+  <script src="./assets/javascript/lightbox.js"></script>
+
 
 
 </body>
