--- a/index.html
+++ b/index.html
@@ -70,9 +70,10 @@
 
         <!-- Wrapper for slides Content for Slides -->
           <div class="row">
+<div class="main">
 
         <section class="carousel-inner">
-      
+
           <!-- First slider  -->
           <div class="item">
             <div class="sliderimage">
@@ -115,6 +116,7 @@
 
 </section>
     </section>
+  </div>
 
       <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
