--- a/tour-dates.html
+++ b/tour-dates.html
@@ -48,10 +48,10 @@
   <!-- header ends -->
 
 <!--Tour Cards  -->
-<main>
+<div class="main">
 
 <div class="row">
-  <div class="col-m-4">
+  <div class="col-xs-12" align="center">
   <!-- london card -->
   <div class="card tour">
       <img class="card-img-top" src="./assets/images/concert_london_sized.jpg" alt="London Concert">
@@ -124,7 +124,7 @@
         1976
       </td>
     <td>
-        <a href="#">Watch concert</a>
+        <a href="https://www.youtube.com/watch?v=ZY77zDzNmYw" target="_blank">Watch concert</a>
       </td>
     </tr>
     <tr>
@@ -202,7 +202,7 @@
 </table>
 </div>
 
-</main>
+</div>
 
   <!-- footer-->
 <div class="row">
