--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
           <!-- First slider  -->
           <div class="item">
-            <div class="sliderimage">
+            <div class="sliderimage" align="center">
             <img src="./assets/images/intro_aladinsane.png" alt="Aladin Sane" class="center">
           </div>
           </div>
@@ -84,7 +84,7 @@
 
           <!-- Second slider  -->
           <div class="item active">
-            <div class="sliderimage">
+            <div class="sliderimage" align="center">
               <img src="./assets/images/Intro_davidjones.png" alt="Davy jones Live" class="center">
             </div>
           </div>
@@ -92,7 +92,7 @@
 
           <!-- Third slider  -->
           <div class="item">
-            <div class="sliderimage">
+            <div class="sliderimage" align="center">
             <img src="./assets/images/intro_ziggystardust.jpg" alt="Ziggy Stardust Image" class="center">
           </div>
         </div>
