--- a/shop.html
+++ b/shop.html
@@ -11,7 +11,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon-16x16.png">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,900" rel="stylesheet" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" href="./assets/stylesheets/lightbox.min.css" type="text/css" />
+  <link rel="stylesheet" href="./assets/stylesheets/lightbox.css" type="text/css" />
   <!-- <link rel="stylesheet" type="text/css" href="./assets/stylesheets/flexboxgrid.min.css" /> -->
   <link href="./assets/stylesheets/style.css" rel="stylesheet" type="text/css" />
 </head>
@@ -54,8 +54,9 @@
 <div class="container">
 <div class="row">
   <ul class="filterlist col-xs-12">
-  <li data-filter="old"><button class="btn active">Old</button></li>
-  <li data-filter="new"><button class="btn">New</button></li>
+    <li ><button data-filter="all" class="btn active">All</button></li>
+   <li><button data-filter="old" class="btn">Old</button></li>
+   <li ><button class="btn" data-filter="new">New</button></li>
 </ul>
 </div>
 
@@ -63,28 +64,31 @@
     <!--Gallery  -->
     <div class="row">
       <div class="filtr-container">
-        <div class="filtr-item col-xs-6" data-category="new" data-sort="value">
+        <div class="col-xs-12">
+        <div class="col-xs-6 filtr-item" data-category="new, all" data-sort="value">
           <img class="img-responsive text-center" src="./assets/images/product_promo.png" alt="new">
         </div>
-        <div class="filtr-item col-xs-3" data-category="new" data-sort="value">
+        <div class="col-xs-3 filtr-item" data-category="new, all" data-sort="value">
           <img class="img-responsive" src="./assets/images/product_2.png" alt="new" >
         </div>
-      <div class="filtr-item col-xs-3" data-category="new" data-sort="value">
+      <div class="col-xs-3 filtr-item" data-category="new, all" data-sort="value">
           <img class="img-responsive" src="./assets/images/product_3.png" alt="new">
       </div>
-        <div class="filtr-item col-xs-3" data-category="old" data-sort="value">
+        <div class="col-xs-3 filtr-item" data-category="old, all" data-sort="value">
           <img class="img-responsive" src="./assets/images/product_4.png" alt="old" >
       </div>
-        <div class="filtr-item col-xs-3" data-category="new" data-sort="value">
+        <div class="col-xs-3 filtr-item " data-category="new, all" data-sort="value">
           <img class="img-responsive" src="./assets/images/product_1.png" alt="new">
         </div>
       </div>
-        <div class="filtr-item col-xs-3" data-category="old" data-sort="value">
+        <div class="col-xs-3 filtr-item " data-category="old, all" data-sort="value">
           <img class="img-responsive" src="./assets/images/product_5.png" alt="old">
       </div>
-        <div class="filtr-item col-xs-3" data-category="new" data-sort="value">
+        <div class="col-xs-3 filtr-item " data-category="new, all" data-sort="value">
           <img class="img-responsive" src="./assets/images/product_6.png" alt="new">
       </div>
+    </div>
+
   </div>
     </div>
   </div>
@@ -98,7 +102,10 @@
 
 
   <!-- footer-->
+
+
   <footer class="container" role="footer">
+
     <!-- social icons -->
   <ol class="social-icons-list">
     <h6>
@@ -138,10 +145,9 @@
     <script src="./assets/javascript/jquery.filterizr.min.js"></script>
     <script>
     var filterizd = $('.filtr-container').filterizr({
-       //options object
+      layout: 'packed'
     });
     </script>
-
 
 </body>
 </html>
