--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
           <p>
             Top Tracks
           </p>
-          <ol>
+          <ol class="tracks">
             <li>"Liza Jane" </li>
             <li>"Louie, Louie Go Home" </li>
           </ol>
@@ -109,7 +109,7 @@
           <p>
             Top Tracks
           </p>
-          <ol>
+          <ol class="tracks">
             <li>"Heroes" </li>
             <li>"Space Oddity" </li>
           </ol>
@@ -130,7 +130,7 @@
           <p>
             Top Tracks
           </p>
-          <ol>
+          <ol class="tracks">
             <li>"Watch that Man" </li>
             <li>"Aladin Sane" </li>
           </ol>
