--- a/media.html
+++ b/media.html
@@ -51,34 +51,23 @@
 
 <div class="row">
   <div class="column media col-xs-6">
-    <div class="content promo">
 <iframe width="560" height="320" src="https://www.youtube.com/embed/FiK7s_0tGsg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   </div>
-  </div>
-
   <div class="column media col-xs-3">
-    <div class="content">
       <a href="./assets/images/media_sukitamimesit_1973.jpg" data-lightbox="sukitamimesit" data-title="David 1">
       <img class="img-responsive lightbox-img" src="./assets/images/media_sukitamimesit_1973.jpg" alt="sukitamimesit" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow">
-    </div>
   </div>
   <div class="column media col-xs-3">
-    <div class="content">
       <a href="./assets/images/media_fanclose1975.jpg" data-lightbox="fanclose1975" data-title="David 2">
       <img class="img-responsive lightbox-img" src="./assets/images/media_fanclose1975.jpg" alt="fanclose" style="width:100%">
-    </div>
   </div>
   <div class="column media col-xs-3">
-    <div class="content">
       <a href="./assets/images/media_mime1967.jpg" data-lightbox="davymime" data-title="David 3">
       <img class="img-responsive lightbox-img" src="./assets/images/media_mime1967.jpg" alt="davymime" style="width:100%">
-    </div>
   </div>
   <div class="column media col-xs-3">
-    <div class="content">
       <a href="./assets/images/media_monoheroes.jpg" data-lightbox="monoheroes" data-title="David 4">
       <img src="./assets/images/media_monoheroes.jpg" alt="monoheroes" style="width:100%">
-    </div>
   </div>
   <!-- <div class="column media col-xs-3">
     <div class="content">
@@ -86,16 +75,18 @@
     </div>
   </div> -->
   <div class="column media col-xs-3">
-    <div class="content">
       <a href="./assets/images/media_pinkhunky_1972.jpg" data-lightbox="pinkhunky_1972" data-title="David 5">
       <img src="./assets/images/media_pinkhunky_1972.jpg" alt="pinkhunky_1972" style="width:100%">
-    </div>
   </div>
   <div class="column media col-xs-3">
-    <div class="content">
       <a href="./assets/images/media_siggystool.jpg" data-lightbox="media_siggystool" data-title="David 6">
       <img src="./assets/images/media_siggystool.jpg" alt="media_siggystool" style="width:100%">
-    </div>
+  </div>
+  <div class="column media col-xs-6">
+  <iframe width="560" height="320" src="https://www.youtube.com/embed/pSx3uT9cJ04" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  </div>
+  <div class="column media col-xs-6">
+<iframe width="560" height="320" src="https://www.youtube.com/embed/P4d8QrRJvsE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   </div>
 </div>
 
